Fixed Image overlap for Firefox and Webkit

--- a/styles/SingleChatComponent.module.css
+++ b/styles/SingleChatComponent.module.css
@@ -32,8 +32,17 @@
   display: inline-block;
   position: relative;
   height: 100%;
+  width: 50px;
+  overflow: hidden;
+}
+
+.image {
+  display: inline-block;
+  position: relative;
   border-radius: 50%;
+  height: 100%;
   aspect-ratio: 1/1;
+  overflow: hidden;
 }
 
 .unreadMessagesNum {
@@ -59,8 +68,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 80%;
-  margin-left: 10px;
+  width: 50%;
   flex-grow: 1;
   height: 100%;
 }
